--- a/examples/simple.html
+++ b/examples/simple.html
@@ -13,29 +13,37 @@
 	<link rel="apple-touch-icon" href="/apple-touch-icon.png">
 	
 	<title>Sheetify Demo</title>
+
+	<link href="css/base.css" media="screen, projection" rel="stylesheet" type="text/css" />
 	
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
-	<script src="jquery.sheetify.js?v=1.0"></script>
+	<script src="../jquery.sheetify.js?v=1.0"></script>
 	<script type="text/javascript">
 		(function($) {
-			
+			$(function() {
+				$( '#main' ).on( 'click', '.quadrant', function( e ) {
+					$(this).sheetify({message:this.id + ' sheetified!'});
+				});
+			});
 		})( jQuery );
 	</script>
 </head>
 <body>
 	<div id="top">
-    		<div id="container">
+    	<div id="container">
 
-        		<header id="global-header" class="clearfix">
+        	<header id="global-header" class="clearfix">
 				
 			</header>
 
 			<div id="main" role="main">
-				<div id="quadrant-1" class="alpha quadrant"></div>
-				<div id="quadrant-2" class="alpha quadrant"></div>
-				<div class="clearfix"></div>
-				<div id="quadrant-3" class="alpha quadrant"></div>
-				<div id="quadrant-4" class="alpha quadrant"></div>
+				<div class="container_12">
+					<div id="quadrant-2" class="alpha quadrant grid_4"><button>Sheetify Quadrant 2</button></div>
+					<div id="quadrant-1" class="omega quadrant grid_4"><button>Sheetify Quadrant 1</button></div>
+					<div class="clearfix"></div>
+					<div id="quadrant-3" class="alpha quadrant grid_4"><button>Sheetify Quadrant 3</button></div>
+					<div id="quadrant-4" class="omega quadrant grid_4"><button>Sheetify Quadrant 4</button></div>
+				</div>
 			</div>
 		</div>
 	</div>
