Updated title in simple example.

--- a/examples/simple.html
+++ b/examples/simple.html
@@ -12,7 +12,7 @@
 	<link rel="shortcut icon" href="/favicon.ico">
 	<link rel="apple-touch-icon" href="/apple-touch-icon.png">
 	
-	<title>Sheetify Demo</title>
+	<title>Sheetify Demo - Simple</title>
 
 	<link href="css/base.css" media="screen, projection" rel="stylesheet" type="text/css" />
 	
