--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
       <div class="inner">
         <h1>Sheetify</h1>
-        <h2>A jQuery Plugin which may be used to render a translucent sheet on top of any HTML element.</h2>
+        <h2>A jQuery plugin which may be used to render a translucent sheet on top of any HTML element.</h2>
         <a href="https://github.com/neotericneoteny/sheetify" class="button"><small>View project on</small>GitHub</a>
       </div>
     </header>
@@ -30,7 +30,7 @@
         <section id="main-content">
           <h3>Welcome to Sheetify.</h3>
 
-<p>Sheetify is a jQuery Plugin used to render a translucent sheet on top of any HTML DOM element.  A sheet's opacity level can range anywhere from fully opaque ({opacity:1}) to fully translucent ({opacity:0}) and the color of the sheet can be any valid CSS color value (e.g, hexadecimal, rgb).  Each sheet's styling may be completely customized through CSS by targeting the provided CSS class name, 'neo-overlay-sheet'.  To override the default CSS options, append '!important' in the stylesheet declaration for each style.</p>
+<p>Sheetify is a jQuery plugin used to render a translucent sheet on top of any HTML DOM element.  A sheet's opacity level can range anywhere from fully opaque ({opacity:1}) to fully translucent ({opacity:0}) and the color of the sheet can be any valid CSS color value (e.g, hexadecimal, rgb).  Each sheet's styling may be completely customized through CSS by targeting the provided CSS class name, 'neo-overlay-sheet'.  To override the default CSS options, append '!important' in the stylesheet declaration for each style.</p>
 
 <h3>Usage</h3>
 
