--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
 		});
 	</script>
 
-    <title>Sheetify by neotericneoteny</title>
+    <title>Sheetify by Matthew Zimmer</title>
   </head>
 
   <body>
     <header>
       <div class="inner">
         <h1>Sheetify</h1>
-        <h2>A jQuery plugin purposed to render a translucent sheet on top of any HTML element.</h2>
+        <h2>A jQuery plugin chiefly purposed to render a translucent sheet on top of any HTML element.</h2>
         <a href="https://github.com/neotericneoteny/sheetify" class="button"><small>View project on</small>GitHub</a>
       </div>
     </header>
@@ -40,7 +40,7 @@
         <section id="main-content">
           <h3>Welcome to Sheetify.  <a href="#" id="try-me">Try me!</a></h3>
 
-<p>Sheetify is a jQuery plugin purposed to render a translucent sheet on top of any HTML element.  A sheet's opacity level can range anywhere from fully opaque ({opacity:1}) to fully translucent ({opacity:0}) and the color of the sheet can be any valid CSS color value (e.g, hexadecimal, rgb).  Each sheet's styling may be completely customized through CSS by targeting the provided CSS class name, 'neo-overlay-sheet'.  To override the default CSS options, append '!important' in the stylesheet declaration for each style.</p>
+<p>Sheetify is a jQuery plugin chiefly purposed to render a translucent sheet on top of any HTML element.  A sheet's opacity level can range anywhere from fully opaque ({opacity:1}) to fully translucent ({opacity:0}) and the color of the sheet can be any valid CSS color value (e.g, hexadecimal, rgb).  Each sheet's styling may be completely customized through CSS by targeting the provided CSS class name, 'neo-overlay-sheet'.  To override the default CSS options, append '!important' in the stylesheet declaration for each style.</p>
 
 <h3>Usages</h3>
 
