--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
-	<script src="https://raw.github.com/neotericneoteny/sheetify/master/jquery.sheetify.js"></script>
+	<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
+	<script type="text/javascript" src="https://raw.github.com/neotericneoteny/sheetify/master/jquery.sheetify.js"></script>
 	<script>
 		$(function() {
 			$('#main-content').on('click','#try-me', function() {
