--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <![endif]-->
 
 	<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
-	<script type="text/javascript" src="https://raw.github.com/neotericneoteny/sheetify/master/jquery.sheetify.js"></script>
+	<script type="text/javascript" src="http://static.neotericneoteny.com/js/jquery/jquery.sheetify.js"></script>
 	<script>
 		$(function() {
 			$('#main-content').on('click','#try-me', function() {
